Wed Jul 16 12:57:22 MET DST 1997: hannes
        * introduced '.singularrc', modified loading of satndard.lib 
          (tesths.cc)
Tue Jul 15 13:57:46 MET DST 1997: hannes
        * added call to proc in from standard.lib in tesths.cc

Wed Jul  9 17:50:23 MET DST 1997: hannes/siebert
        * added new type (resolution)
        -> extra.cc, ipid.cc, iparith.cc, ipconv.cc, syz.h, syz1.cc

Fri Jun 20 12:18:10 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* tesths.cc (main): fixed condition of mprs_ttGen execution

Thu Jun 19 10:49:10 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* mpsr_Put.h: corrected efinitions of MP_AnnotReqValTree, MP_AnnotReqValNode

Tue Jun 17 11:47:47 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* Makefile.in (Singular): added mod2.h to dependencies of iparith.inc

	* tok.h: no discrimination of mac for inline definition any more

Wed Jun 11 09:56:05 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* mpsr_Tok.cc (cmd_dictcops): changed names of some MP_Cops

	* longrat.[cc,h], tesths.cc, Makefile.in, configure.in: 
	  added support for smallgmp

Tue Jun 10 17:25:28 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* sing_mp.cc: Got rid off warnings, when incomplete link specs

Thu Jun  5 15:16:19 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* tests/mpcheck: added check for correct remote shell 

Sun May 25 14:06:12 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* configure.in: Fixed handling of CXXFLAGS -- it is not touched if
	  set as env var

Fri May 23 11:40:14 1997  Olaf Bachmann  <obachman@schlupp.mathematik.uni-kl.de (Olaf Bachmann)>

	* Makefile.in: Changed dist target to cp; make distclean

Wed May 21 08:56:19 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>
